JSAI/error/src/test/resources/base/v006.js
var x = 1;
x++;
print(x);